fixing layout issue for footer

--- a/css/mapping_victory.css
+++ b/css/mapping_victory.css
@@ -8,7 +8,12 @@ html, body {
     font-weight: 400;
     font-style: normal;
 }
-body.internal { background-color: #ecede4; }
+body.internal {
+    background-color: #ecede4;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: 90px 1fr auto;
+}
 body.boilerplate { background-color: #e9ddc6; }
 
 header {
@@ -543,7 +548,7 @@ main.boilerplate { background-color: #e9ddc6; }
 
 }
 .feature-metadata-pane.visible {
-    max-height: 100vh;
+    max-height: unset;
     opacity: 1;
     padding: 20px;
     width: calc(100% - 36px);
@@ -559,6 +564,7 @@ main.boilerplate { background-color: #e9ddc6; }
     justify-content: center;
     background-color: #ecede4;
 }
+#footer.internal { position: relative; z-index: 100; }
 #footer-logo {
 }
 #footer-content {
